--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="fullbody">
   <div id="wrapper">
     <div id="header">
-      <h3 class="text-center">Quote for today</h3>
+      <h3 class="text-center">Best Quotes of All Times!</h3>
     </div>
     <div id="quote-box">
       <div>
