adding more social media options

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <div class="button-container">
         <div id="left-button">
           <a id="tweet-quote" class="button quote-buttons" href="twitter.com/intent/tweet"><i class="fa fa-twitter"></i></a>
+          <a id="fb-quote" class="button quote-buttons" href="facebook.com"><i class="fa fa-facebook"></i></a>
+          <a id="instagram-quote" class="button quote-buttons" href="instagram.com"><i class="fa fa-instagram"></i></a>
+          <a id="google-quote" class="button quote-buttons" href="google-plus.com"><i class="fa fa-google-plus"></i></a>
         </div>
         <div id="right-button">
           <a id="new-quote" class="quote-buttons" href="#">Next Quote</a>
